syntax="proto3";

package auth_service;
option go_package="genproto/auth_service";

message User {
  string id = 1;
  string username = 2;
  string first_name = 3;
  string last_name = 4;
  string phone = 5;
  string extra_phone = 6;
  string email = 7;
  bool email_verification = 8;
  string password = 9;
  string country_id = 10;
  string city_id = 11;
  string prof_sphere = 12;
  string degree = 13;
  string address = 14;
  string post_code = 15;
}